--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+table , td{
+	border:solid black 1px;
+}
+
+.green{
+	background-color:green;
+}
+.blue{
+	background-color:blue;
+}
